# jarvis

./: .gitignore  .gitlab-ci.yml  README.md
src/: Dockerfile  main.py  pyproject.toml
src/core/: config.py
src/speechkit/: google.py
