[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = ""
authors = ["Rashid Mingazov <rashid.mingazov@mircod.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.21"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
aiohttp = "^3.8.1"
SpeechRecognition = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
